<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.correios.edwinos.consultacorreios.InsertActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frendlyNameLabel"
        android:id="@+id/frendlyNameLabel"
        android:layout_alignParentTop="true"
    />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frendlyName"
        android:hint="@string/frendlyNameSample"
        android:layout_below="@+id/frendlyNameLabel"
    />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/codeObjLabel"
        android:id="@+id/codeObjLabel"
        android:layout_below="@+id/frendlyName"
        android:layout_marginTop="16dp"
      />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codeObj"
        android:hint="@string/codeObjSample"
        android:layout_below="@+id/codeObjLabel"
      />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codeObj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:weightSum="1">

        <Button
            android:layout_height="wrap_content"
            android:text="@string/cancelBtn"
            android:id="@+id/cancelBtn"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:onClick="onCancelBtnClicked"
            />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/okBtn"
            android:id="@+id/okBtn"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:onClick="onOkBtnClicked"
        />

    </LinearLayout>

</RelativeLayout>
